# DevControl_openHarmony

.cache/: .tsbuildinfo  .tsbuildinfo.linter
.deveco/plans/: 1784121982989-playful-circuit.md
DevControl/: .gitignore  README.md  build-profile.json5
DevControl/.cache/: .tsbuildinfo  .tsbuildinfo.linter
DevControl/AppScope/: app.json5
DevControl/gateway/: .gitignore  README.md  pyproject.toml  requirements.txt
DevControl/protocol/: README.md
QRgeneration/: .gitignore  README.md  generate_device_qr.py  generation_device_qr.py  requirements.txt
VirtualGateway/: README.md  pyproject.toml  requirements.txt
VirtualGateway/certs/: demo-ca.crt  gateway.crt
VirtualGateway/devcontrol_gateway/: __main__.py  adapters.py  app.py  composition.py  config.py  devices.py  drivers.py  errors.py  models.py  mqtt_transport.py  registry.py  security.py  service.py  storage.py
VirtualGateway/devcontrol_gateway/extensions/: __init__.py  virtual_fan.py
VirtualGateway/protocol/: README.md  protocol-v1.schema.json
VirtualGateway/scripts/: e2e_common.py  e2e_smoke.py  generate_demo_certs.ps1  generate_demo_certs.py  performance_test.py  run_e2e_suite.py  run_gateway.ps1  security_negative_test.py  security_scan.ps1  stability_test.py  test_gateway.ps1  test_stability.ps1
VirtualGateway/tests/: test_device_drivers.py  test_device_registration.py  test_gateway.py  test_protocol_schema.py  test_room_management.py  test_transports.py
docs/: README.md  传输协议与安全评估.md  开发调试指南.md  扩展性视频录制方案.md  测试报告.md  用户文档.md  设备接入与驱动说明.md  设计文档.md  需求文档.md  验收追踪矩阵.md
(+99 files in other folders)
