[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devcontrol-gateway"
version = "1.1.0"
description = "DevControl competition-grade virtual smart-home gateway"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "cryptography>=43,<47",
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "jsonschema>=4.23,<5",
  "websocket-client>=1.8,<2",
  "psutil>=6,<8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["devcontrol_gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
